--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next",
     "build": "next build",
     "export": "next build && next export",
-    "serve": "serve"
+    "serve": "serve",
+    "now-build": "next build && next export -o dist"
   },
   "dependencies": {
     "isomorphic-unfetch": "^3.0.0",
